Fix layout issues on mobile

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
 
 .graph-container {
   position: relative;
-  width: fit-content;
+  width: -moz-fit-content; width: -webkit-fit-content; width: fit-content;
   margin: 10px auto;
 }
 
@@ -23,6 +23,7 @@ body {
   right: 0;
   position: absolute;
   z-index: -1;
+  overflow: hidden;
 }
 
 .graph {
@@ -35,8 +36,7 @@ body {
 .legend-box {
   position: absolute;
   right: 10px;
-  top: 80%;
-  transform: translateY(-50%);
+  top: 75%;
   width: 90px;
   height: 60px;
   border: 2px solid #333;
